--- a/cog.yaml
+++ b/cog.yaml
@@ -4,7 +4,7 @@
 build:
   # set to true if your model requires a GPU
   gpu: true
-  cuda: "12.1"
+  cuda: "11.8"
 
   # a list of ubuntu apt packages to install
   system_packages:
@@ -23,22 +23,34 @@ build:
     - "accelerate==0.21.0"
     - "pyyaml==6.0"
     - "Pillow==9.2.0"
-    - "scipy==1.9.3"
+    - "scipy>=1.9.3"
     - "tqdm==4.64.1"
     - "psutil==5.9.5"
     - "pytorch_lightning==1.9.4"
     - "omegaconf==2.2.3"
     - "pygit2==1.12.2"
     - "opencv-contrib-python==4.8.0.74"
-    - "torch==2.1.0"
-    - "torchvision==0.16.0"
+    - "torch==2.0.1"
+    - "torchvision==0.15.2"
+    - "addict==2.4.0"
+    - "future==0.18.3"
+    - "lmdb==1.4.1"
+    - "numpy==1.26.2"
+    - "opencv-python==4.8.1.78"
+    - "requests==2.31.0"
+    - "scikit-image==0.22.0"
+    - "tb-nightly"
+    - "yapf==0.40.2"
+    - "lpips==0.1.4"
+    - "insightface>=0.7.3"
+    - "onnxruntime-gpu"
 
   # commands run after the environment is setup
   # run:
   #   - "echo env is ready!"
   #   - "echo another command if needed"
 
-image: "r8.im/konieshadow/fooocus-api"
+image: "r8.im/nbictch/fooocus-api"
 
 # predict.py defines how predictions are run on your model
 predict: "predict.py:Predictor"
