--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "CodeFormer"]
-	path = CodeFormer
-	url = https://huggingface.co/spaces/sczhou/CodeFormer
 [submodule "inswapper"]
 	path = inswapper
 	url = https://github.com/NBICtch/inswapper.git
+[submodule "CodeFormer"]
+	path = CodeFormer
+	url = https://github.com/NBICtch/CodeFormer.git
